# anml-server-python

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
anml_server/: __init__.py  builder.py  serializer.py  types.py
tests/: test_server.py
