[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anml-server"
version = "0.1.0"
description = "ANML 1.0 server SDK for Python — document builder, serialization, discovery, and validation"
readme = "README.md"
license = "ISC"
requires-python = ">=3.10"
authors = [
    { name = "ANML Foundation", email = "sponsors@anmlfoundation.org" },
]
keywords = ["anml", "agent", "agentic", "markup", "server", "duckument"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3.0",
]

[project.urls]
Homepage = "https://anmlfoundation.org"
Repository = "https://github.com/ANML-Foundation/anml-server-python"
Documentation = "https://anmlfoundation.org/developers"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
fastapi = ["fastapi>=0.100"]
flask = ["flask>=3.0"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
